k8s/base/message-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      # hard: только app-узлы; soft: предпочтительно disk=fast
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values: ["app"]
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: disk
                    operator: In
                    values: ["fast"]
      containers:
        - name: message-service
          image: mablinov2704/message-service:latest
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
      volumes:
        # S3-хранилище подключается ИСКЛЮЧИТЕЛЬНО через CSI-mount (PVC -> S3 PV)
        - name: uploads
          persistentVolumeClaim:
            claimName: message-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    app: message-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
